Update pom.xml and project name